fix double scrollbar

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -28,6 +28,7 @@ html, body {
 body {
     font-family: 'Rubik', sans-serif;
     letter-spacing:-0.02rem;
+    overflow-y: hidden;
     margin:0;
     padding:0;
 }
